Added Change Log code to all states and EPBC Updated metadata

--- a/source-code/py-notebook/EPBC-conservation.ipynb
+++ b/source-code/py-notebook/EPBC-conservation.ipynb
@@ -5,18 +5,56 @@
    "source": [
     "# EPBC Conservation List\n",
     "\n",
-    "List in ALA Species List tool: __[EPBC Act Threatened Species (dr656)](https://lists.ala.org.au/speciesListItem/list/dr656)__\n",
+    "### List Identifiers\n",
+    "* EPBC Conservation list: __[dr656](https://lists.ala.org.au/speciesListItem/list/dr656)__ (and [dr656 in test](https://lists-test.ala.org.au/speciesListItem/list/dr656))\n",
+    "* BONN Conservation list: __[dr18987](https://lists.ala.org.au/speciesListItem/list/dr18987)__\n",
+    "* CAMBA Conservation list: __[dr18989](https://lists.ala.org.au/speciesListItem/list/dr18989)__\n",
+    "* JAMBA Conservation list: __[dr18988](https://lists.ala.org.au/speciesListItem/list/dr18988)__\n",
+    "* ROKAMBA Conservation list: __[dr18990](https://lists.ala.org.au/speciesListItem/list/dr18990)__\n",
+    "\n",
+    "### Collections:\n",
+    "* EPBC:  __[dr656](https://collections.ala.org.au/public/show/dr656)__\n",
+    "* BONN:  __[dr18987](https://collections.ala.org.au/public/show/dr18987)__\n",
+    "* CAMBA:  __[dr18989](https://collections.ala.org.au/public/show/dr18989)__\n",
+    "* JAMBA:  __[dr18988](https://collections.ala.org.au/public/show/dr18988)__\n",
+    "* ROKAMBA:  __[dr18990](https://collections.ala.org.au/public/show/dr18990)__\n",
+    "\n",
+    "## Source Data\n",
+    "* __[Threatened Species and Ecological Communities of National Environmental Significance (on data.gov.au)](https://data.gov.au/data/dataset/threatened-species-state-lists)__\n",
+    "* __[Dataset landing page](https://data.gov.au/data/dataset/threatened-species-state-lists/resource/78401dce-1f40-49d3-92c4-3713d6e34974)__\n",
+    "* __[Direct data download](https://data.gov.au/data/dataset/ae652011-f39e-4c6c-91b8-1dc2d2dfee8f/resource/78401dce-1f40-49d3-92c4-3713d6e34974/download/20221005spcs.csv)__\n",
+    "* __[API](https://data.gov.au/data/api/1/util/snippet/api_info.html?resource_id=78401dce-1f40-49d3-92c4-3713d6e34974)__\n",
+    "\n",
+    "\n",
+    "**Metadata URL**\n",
+    "https://data.gov.au/data/dataset/threatened-species-state-lists\n",
+    "\n",
+    "**Metadata Description**\n",
+    "\n",
+    "**EPBC**\n",
     "\n",
     "This dataset contains information about species of national environmental significance as listed in the Environment Protection and Biodiversity Conservation Act 1999 (EPBC Act). Data provided includes:\n",
     "- species names and threatened status\n",
     "- indicative occurrence within each state, territory and marine area\n",
     "- links to further information in the Species Profile and Threats Database (SPRAT).\n",
     "\n",
-    "## Documentation\n",
-    "* __[Threatened Species and Ecological Communities of National Environmental Significance (on data.gov.au)](https://data.gov.au/data/dataset/threatened-species-state-lists)__\n",
-    "* __[Dataset landing page](https://data.gov.au/data/dataset/threatened-species-state-lists/resource/78401dce-1f40-49d3-92c4-3713d6e34974)__\n",
-    "* __[Direct data download](https://data.gov.au/data/dataset/ae652011-f39e-4c6c-91b8-1dc2d2dfee8f/resource/78401dce-1f40-49d3-92c4-3713d6e34974/download/20221005spcs.csv)__\n",
-    "* __[API](https://data.gov.au/data/api/1/util/snippet/api_info.html?resource_id=78401dce-1f40-49d3-92c4-3713d6e34974)__"
+    "Threatened species currently listed under the Environment Protection and Biodiversity Conservation Act 1999 (EPBC Act) sourced from the Department of Agriculture, Water and the Environment's Species Profiles and Threats database (SPRAT). Data includes: - Status of EPBC Act threatened, migratory, marine and cetacean species. - Available species recovery documents for EPBC Act species (recovery plan and conservation advice). - Species' taxonomy. - Status of State and Territory Government threatened species (indicative only). Please verify with relevant State and Territory Government agencies. - Species presence within State's, mainland Territory's, external Territory's and the Commonwealth marine area (indicative only). The report presents the current taxonomic understanding of a species. Every effort is made to maintain the accuracy of data that is used in this list. If a species is listed more than once on a statutory list (as a result of taxonomic change), it will be given more than one status in the status column (i.e. \"status 1, status 2\"). The status and presence of State and Territory Government threatened species should be verified with relevant agencies. Further details available at: https://www.environment.gov.au/cgi-bin/sprat/public/sprat.pl\n",
+    "\n",
+    "**BONN**\n",
+    "\n",
+    "The Bonn Convention appendices identify migratory taxa at and below the species level, as well as some whole families in Appendix II. The convention definition of migratory species is ‘the entire population or any geographically separate part of the population of any species or lower taxon of wild animals, a significant proportion of whose members cyclically and predictably cross one or more national jurisdictional boundaries’. This definition has been adopted in the EPBC Act. The family listings in Appendix II of the Bonn Convention do not explicitly include all members of each family and, for the purposes of the EPBC Act, the family listings include only those species which are native to Australia and are known to be cyclical and predictable migrants into and out of Australia. The taxonomy of families used in the Bonn Convention appendices is not regularly updated. The following codes are used in the Bonn Convention appendices: A1: species listed explicitly in Appendix 1; A2S: species listed explicitly in Appendix 2; A2H: species is member of a family listed in Appendix 2; and A2S*: species listed as a result of a recent taxonomic revision of a species listed explicitly in Appendix 2. More information is available at https://www.environment.gov.au/cgi-bin/sprat/public/publicshowmigratory.pl\n",
+    "\n",
+    "**CAMBA**\n",
+    "\n",
+    "This list of migratory species established under section 209 of the EPBC Act includes migratory species included in annexes established under the China-Australia Migratory Bird Agreement (CAMBA).\n",
+    "\n",
+    "**JAMBA**\n",
+    "\n",
+    "This list of migratory species established under section 209 of the EPBC Act includes migratory species included in annexes established under the Japan-Australia Migratory Bird Agreement (JAMBA).\n",
+    "\n",
+    "**ROKAMBA**\n",
+    "This list of migratory species established under section 209 of the EPBC Act includes native, migratory species identified in a list established under, or an instrument made under, an international agreement approved by the Minister, such as the Republic of Korea-Australia Migratory Bird Agreement (ROKAMBA). See http://www.austlii.edu.au/au/other/dfat/treaties/2007/24.html\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -43,6 +81,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import list_functions as lf\n",
     "#projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
     "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "sourceDataDir = projectDir + \"source-data/EPBCA/\"\n",
@@ -66,7 +105,10 @@
     "... or read from cached version"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -130,7 +172,10 @@
     "## Check values"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -306,7 +351,10 @@
     "## Check values"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -390,46 +438,103 @@
     "1. Load the list above into the lists-test tool for this data resource\n",
     "2. Unskip the below code and Run the reports below to compare to production. Send the changelog.csv to check. Correct any issues.\n",
     "3. Save the production list into the `historical lists` directory by uncommenting the code section below.\n",
-    "4. Load the list from `current lists` into production\n"
+    "4. Load the list from `current lists` into production"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Conservation List - Download old and new and compare"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "#  %%script echo skipping # comment this line to run this code\n",
+    "# %%script echo skipping # comment this line to run this code\n",
     "\n",
-    "def download_ala_list(url:str):\n",
-    " with urllib.request.urlopen(url,context=ssl.create_default_context(cafile=certifi.where())) as url:\n",
-    "  data = json.loads(url.read().decode())\n",
-    "  data = pd.json_normalize(data)\n",
-    "  return data\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
     "\n",
-    "# download the prod list\n",
-    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/dr656?max=10000\"\n",
-    "prodList = download_ala_list(prodListUrl)\n",
-    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/dr656?max=10000\"\n",
-    "testList = download_ala_list(testListUrl)\n",
+    "# conservation\n",
+    "filename = \"NT-conservation.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr656\" + \"?max=10000&includeKVP=true\"\n",
+    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr656\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
     "\n",
-    "# new names\n",
-    "testvsprod = pd.merge(testList,prodList,how='left',on='name')\n",
-    "testvsprod = testvsprod[testvsprod['scientificName_y'].isna()][['name','commonName_x','scientificName_x']]\n",
-    "testvsprod['status'] = 'added'\n",
-    "# old names\n",
-    "prodvstest = pd.merge(prodList,testList,how='left',on='name')\n",
-    "prodvstest = prodvstest[prodvstest['scientificName_y'].isna()][['name','commonName_y','scientificName_y']]\n",
-    "prodvstest['status'] = 'removed'\n",
-    "# union and display in alphabetical order\n",
-    "changelist = pd.concat([testvsprod,prodvstest])\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Old code in next cell requires check against new code above"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#### Old code requires check against new\n",
     "\n",
-    "# save the prod list to the historical lists directory\n",
-    "prodList.to_csv(projectDir + \"historical-lists/conservation/EPBC_Act_Threatened_Species.csv\",encoding=\"UTF-8\",index=False)\n",
-    "# save the change log\n",
-    "changelist.to_csv(projectDir + \"analysis/change-log/202211-EPBC-conservation.csv\",encoding=\"UTF-8\",index=False)\n"
+    "# def download_ala_list(url:str):\n",
+    "#  with urllib.request.urlopen(url,context=ssl.create_default_context(cafile=certifi.where())) as url:\n",
+    "#   data = json.loads(url.read().decode())\n",
+    "#   data = pd.json_normalize(data)\n",
+    "#   return data\n",
+    "#\n",
+    "# # download the prod list\n",
+    "# prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/dr656?max=10000\"\n",
+    "# prodList = download_ala_list(prodListUrl)\n",
+    "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/dr656?max=10000\"\n",
+    "# testList = download_ala_list(testListUrl)\n",
+    "#\n",
+    "# # new names\n",
+    "# testvsprod = pd.merge(testList,prodList,how='left',on='name')\n",
+    "# testvsprod = testvsprod[testvsprod['scientificName_y'].isna()][['name','commonName_x','scientificName_x']]\n",
+    "# testvsprod['status'] = 'added'\n",
+    "# # old names\n",
+    "# prodvstest = pd.merge(prodList,testList,how='left',on='name')\n",
+    "# prodvstest = prodvstest[prodvstest['scientificName_y'].isna()][['name','commonName_y','scientificName_y']]\n",
+    "# prodvstest['status'] = 'removed'\n",
+    "# # union and display in alphabetical order\n",
+    "# changelist = pd.concat([testvsprod,prodvstest])\n",
+    "#\n",
+    "# # save the prod list to the historical lists directory\n",
+    "# prodList.to_csv(projectDir + \"historical-lists/conservation/EPBC_Act_Threatened_Species.csv\",encoding=\"UTF-8\",index=False)\n",
+    "# # save the change log\n",
+    "# changelist.to_csv(projectDir + \"analysis/change-log/202211-EPBC-conservation.csv\",encoding=\"UTF-8\",index=False)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -453,7 +558,7 @@
     }
    ],
    "source": [
-    "changelist[['status','name','scientificName_x','commonName_x']].sort_values('name')"
+    "# changelist[['status','name','scientificName_x','commonName_x']].sort_values('name')"
    ],
    "metadata": {
     "collapsed": false,
