--- a/source-code/py-notebook/NT-conservation.ipynb
+++ b/source-code/py-notebook/NT-conservation.ipynb
@@ -6,14 +6,28 @@
     "# NT Conservation List\n",
     "\n",
     "## List Identifiers\n",
-    "* Conservation list: __[dr651](https://lists.ala.org.au/speciesListItem/list/dr651)__\n",
+    "* Conservation list: __[dr651](https://lists.ala.org.au/speciesListItem/list/dr651)__ (and [dr651 in test](https://lists-test.ala.org.au/speciesListItem/list/dr651))\n",
+    "* Sensitive list: __[dr492](https://lists.ala.org.au/speciesListItem/list/dr492)__ (and [dr492 in test](https://lists-test.ala.org.au/speciesListItem/list/dr492))\n",
+    "* Collection: __[dr651](https://collections.ala.org.au/public/show/dr651)__ __[dr492](https://collections.ala.org.au/public/show/dr492)__\n",
     "\n",
-    "## Documentation\n",
+    "## Source Data\n",
     "*  __[Home Page](https://nt.gov.au/environment)__\n",
     "*  __[Fauna](https://nt.gov.au/environment/animals/threatened-animals)__\n",
     "*  __[Flora](https://nt.gov.au/environment/native-plants/threatened-plants)__\n",
     "\n",
-    "**Note:** Data was manually copied from website. No API or files available for download"
+    "**Note:** Data was manually copied from website. No API or files available for download. No indication of where to obtain Sensitive list data.\n",
+    "\n",
+    "**Metadata Description**\n",
+    "Classification codes under the Territory Parks and Wildlife Conservation Act: Extinct in the Wild Critically Endangered Endangered Vulnerable Near threatened Data\n",
+    "deficient.\n",
+    "\n",
+    "Learn more about the classifications used by the Department of Natural Resources, Environment, the Arts and Sports.\n",
+    "\n",
+    "**Note:** Under the Northern Territory Department of Environment and Natural Resources Sensitive Flora and Fauna Data Policy, there are currently no flora records classified as sensitive\n",
+    "\n",
+    "**Metadata URL**\n",
+    "https://nt.gov.au/environment\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -40,9 +54,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import dateutil.parser as parser\n",
-    "import json as json"
+    "# import numpy as np\n",
+    "# import dateutil.parser as parser\n",
+    "# import json as json\n",
+    "import list_functions as lf"
    ],
    "metadata": {
     "collapsed": false,
@@ -644,6 +659,110 @@
    "outputs": [],
    "source": [
     "result.to_csv('/northernTerritoryConservationStatusList.csv',index = False,encoding='utf-8-sig')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Manual List check\n",
+    "\n",
+    "**Instructions**\n",
+    "1. Load the lists above into the lists-test tool\n",
+    "2. Check the list name matching score and the text appearance on species pages\n",
+    "3. Unskip the below code and Run the reports below to compare to production. Send the changelog.csv to check. Correct any issues.\n",
+    "4. Save the production list into the `historical lists` directory by uncommenting the code section below.\n",
+    "5. Load the lists into production"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Conservation List - Download old and new and compare"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# %%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"NT-conservation.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr651\" + \"?max=10000&includeKVP=true\"\n",
+    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr651\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Sensitive List - Download old and new and compare\n",
+    "# Not currently in lists-test"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"NT-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr492\" + \"?max=10000&includeKVP=true\"\n",
+    "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr2627\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
    ],
    "metadata": {
     "collapsed": false,
