--- a/source-code/py-notebook/QLD-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/QLD-conservation-sensitive.ipynb
@@ -12,23 +12,36 @@
     "## Lists in the ALA Species List tool\n",
     "* Conservation list: __[dr652](https://lists.ala.org.au/speciesListItem/list/dr652)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr652))\n",
     "* Sensitive list: __[dr493](https://lists.ala.org.au/speciesListItem/list/dr493)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr18404))\n",
+    "* Collection: __[dr652](https://collections.ala.org.au/public/show/dr652)__  __[dr493](https://collections.ala.org.au/public/show/dr493)__\n",
     "\n",
-    "\n",
-    "## Sources\n",
+    "## Source Data\n",
     "Queensland Nature Conservation Act 1992\n",
     "\n",
-    "### Conservation\n",
-    "* __[Metadata - Qld Species (Open Data Portal)](https://www.data.qld.gov.au/dataset/conservation-status-of-queensland-wildlife)__\n",
-    "* __[Data](https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species.csv)__\n",
+    "* __[Conservation](https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species.csv)__\n",
+    "* __[Sensitive](https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/qld-confidential-species.csv)__\n",
+    "* __[Species Codes](https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species-status-codes.csv)__\n",
     "\n",
-    "### Sensitive\n",
-    "* __[Metadata - Queensland Confidential Species (Open Data Portal)](https://www.data.qld.gov.au/dataset/queensland-confidential-species)__\n",
-    "* __[Data](https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/qld-confidential-species.csv)__\n",
+    "**Metadata Description**\n",
     "\n",
-    "### Codes\n",
-    "* __[Metadata - Qld Species codes](https://www.data.qld.gov.au/dataset/conservation-status-of-queensland-wildlife/resource/6344ea93-cadf-4e0c-9ff4-12dfb18d5f14)__\n",
-    "* __[Data](https://apps.des.qld.gov.au/data-sets/wildlife/wildnet/species-status-codes.csv)__\n"
+    "**Conservation:** The list of taxa from the Department of Environment and Science’s WildNet database with their classification codes under the Nature Conservation Act 1992: Extinct (EX), Extinct in the wild (PE), Critically Endangered (CR), Endangered (E), Vulnerable (V), Near threatened (NT, Least concern (C), Special least concern (SL) and International (I). It is published weekly as the Conservation status of Queensland wildlife dataset in the Queensland Government Data portal. Learn more about the classifications used by the Department of Environment and Science from Listing and changing the conservation status of Queensland species.\n",
+    "\n",
+    "**Sensitive:** A list of confidential species for Queensland or \"sensitive species\" supplied directly by the Queensland Department of Environment and Science. It is published weekly as the Queensland Confidential Species dataset in the Queensland Government Data portal. The Atlas of Living Australia generalises all latitude and longitude values in occurrence records of sensitive species in Queensland to one decimal place. This rule is applied to all Queensland occurrence records regardless of source.\n",
+    "\n",
+    "**Metadata URL**\n",
+    "* Qld Species (Open Data Portal) https://www.data.qld.gov.au/dataset/conservation-status-of-queensland-wildlife\n",
+    "* Queensland Confidential Species (Open Data Portal) https://www.data.qld.gov.au/dataset/queensland-confidential-species\n",
+    "* Qld Species codes https://www.data.qld.gov.au/dataset/conservation-status-of-queensland-wildlife/resource/6344ea93-cadf-4e0c-9ff4-12dfb18d5f14"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -89,7 +102,10 @@
     "... save locally"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -563,7 +579,10 @@
     "### Define functions"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -624,7 +643,10 @@
     "### Conservation List - Download old and new and compare"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -672,7 +694,10 @@
     "### Sensitive List - Download old and new and compare"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
