--- a/source-code/py-notebook/TAS-conservation.ipynb
+++ b/source-code/py-notebook/TAS-conservation.ipynb
@@ -5,15 +5,20 @@
    "source": [
     "# Tas Conservation List\n",
     "## List Identifiers\n",
-    "* Conservation list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__\n",
+    "* Conservation list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
+    "* Collection: __[dr654](https://collections.ala.org.au/public/show/dr654)__ __[dr491](https://collections.ala.org.au/public/show/dr491)__\n",
     "\n",
-    "### Sources\n",
-    "Queensland Nature Conservation Act 1992\n",
-    "\n",
-    "## Conservation\n",
+    "## Source Data\n",
     "\n",
     "* __[Home page](https://nre.tas.gov.au/conservation/threatened-species-and-communities/lists-of-threatened-species/full-list-of-threatened-species)__\n",
-    "* __[Data](https://nre.tas.gov.au/Documents/TasThreatenedSpecies.XLS)__"
+    "* __[Data](https://nre.tas.gov.au/Documents/TasThreatenedSpecies.XLS)__\n",
+    "\n",
+    "**Metadata Description**\n",
+    "\n",
+    "Sensitive List: A list of \"restricted species\" was supplied directly by the Tasmanian Department of Primary Industries, Parks, Water and Environment. It is not currently available on the Department's web site. The Atlas Of Living Australia withholds latitude and longitude values in occurrence records for sensitive Tasmanian species. This applies to all Tasmanian occurrence records regardless of source. Reviewed: 2/5/2013 Galaxias Fontanus removed from list 24/6/2013 on notification from DPIPWE\n",
+    "\n",
+    "**Metadata URL**\n",
+    "https://nre.tas.gov.au/conservation/threatened-species-and-communities/lists-of-threatened-species/full-list-of-threatened-species\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -41,6 +46,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import list_functions as lf\n",
+    "\n",
     "# top level directory\n",
     "projectdir = \"/Users/oco115/PycharmProjects/auth-lists-updates/\"\n",
     "basedir = \"/Users/oco115/PycharmProjects/authoritative-lists/\""
@@ -179,6 +186,110 @@
     "print('Writing to CSV')\n",
     "tasconservation.to_csv(projectdir + \"current-lists/conservation-lists/TAS-conservation.csv\", encoding=\"UTF-8\", index=False)\n",
     "print('Finished processing')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Manual List check\n",
+    "\n",
+    "**Instructions**\n",
+    "1. Load the lists above into the lists-test tool\n",
+    "2. Check the list name matching score and the text appearance on species pages\n",
+    "3. Unskip the below code and Run the reports below to compare to production. Send the changelog.csv to check. Correct any issues.\n",
+    "4. Save the production list into the `historical lists` directory by uncommenting the code section below.\n",
+    "5. Load the lists into production"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Conservation List - Download old and new and compare"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# %%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"TAS-conservation.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr654\" + \"?max=10000&includeKVP=true\"\n",
+    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr654\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Sensitive List - Download old and new and compare\n",
+    "### not currently in lists-test"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"TAS-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr491\" + \"?max=10000&includeKVP=true\"\n",
+    "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr2627\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
    ],
    "metadata": {
     "collapsed": false,
