--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -13,6 +13,8 @@
     "* Conservation list: __[dr655](https://lists.ala.org.au/speciesListItem/list/dr655)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr655))\n",
     "* Sensitive list: __[dr490](https://lists.ala.org.au/speciesListItem/list/dr490)__ (in [test](https://lists-test.ala.org.au/speciesListItem/list/dr18669))\n",
     "\n",
+    "* Collection: __[dr655](https://collections.ala.org.au/public/show/dr655)__ __[dr490](https://collections.ala.org.au/public/show/dr490)__\n",
+    "\n",
     "## Sources\n",
     "Victorian Biodivesity Atlas - Victoria Department of Environment, Land, Water and Planning\n",
     "See https://vba.biodiversity.vic.gov.au/vba\n",
@@ -155,7 +157,10 @@
     "# Split out sensitive and conservation lists"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
