--- a/source-code/py-notebook/WA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/WA-conservation-sensitive.ipynb
@@ -144,7 +144,10 @@
     "‘X’ is marked in locality where the species is found - put into a single field"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -284,7 +287,10 @@
     "Map status values"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -552,7 +558,10 @@
     "5. Load the lists into production\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
