--- a/source-code/py-notebook/NSW-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NSW-conservation-sensitive.ipynb
@@ -6,12 +6,20 @@
     "# NSW Conservation and Sensitive Lists\n",
     "\n",
     "## List Identifiers\n",
-    "* Conservation list: __[dr655](https://lists.ala.org.au/speciesListItem/list/dr655)__\n",
-    "* Sensitive list: __[dr487](https://lists.ala.org.au/speciesListItem/list/dr487)__\n",
+    "* Conservation list: __[dr650](https://lists.ala.org.au/speciesListItem/list/dr650)__ (and [dr650 in test](https://lists-test.ala.org.au/speciesListItem/list/dr650))\n",
+    "* Sensitive list: __[dr487](https://lists.ala.org.au/speciesListItem/list/dr487)__ (and [dr2201 in test](https://lists-test.ala.org.au/speciesListItem/list/dr18457))\n",
+    "* Collection: __[dr650](https://collections.ala.org.au/public/show/dr650)__ __[dr487](https://collections.ala.org.au/public/show/dr487)__\n",
+    "### Source Data\n",
     "\n",
-    "## Documentation\n",
     "*  __[Home Page](https://data.bionet.nsw.gov.au)__\n",
-    "*  __[API/Data Info](https://data.bionet.nsw.gov.au/biosvcapp/odata/SpeciesNames)__"
+    "*  __[API/Data Info](https://data.bionet.nsw.gov.au/biosvcapp/odata/SpeciesNames)__\n",
+    "\n",
+    "\n",
+    "**Metadata Description**\n",
+    "Classification codes under the Threatened Species Conservation Act 1995: * Presumed Extinct * Critically Endangered * Endangered * Vulnerable * Endangered Population Learn more about the classifications used by the NSW Office of Environment & Heritage Machine-readable downloads can be obtained by searching NSW BioNet, the website for the Atlas of NSW Wildlife, and selecting: 1. Which species or group? = \"all species\", 2. Legal status = \"Select records that fall under one or more categories\" then choose \"Threatened in NSW\" 3. What area? = \"Entire area\" 4. Period of records? = \"All records\"\n",
+    "\n",
+    "**Metadata URL**\n",
+    "https://data.bionet.nsw.gov.au\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -41,6 +49,7 @@
    "source": [
     "import pandas as pd\n",
     "import urllib.request, json\n",
+    "import list_functions as lf\n",
     "\n",
     "projectdir = \"/Users/oco115/PycharmProjects/auth-lists-updates/NSW-2022-10/\"\n",
     "\n",
@@ -361,6 +370,134 @@
     "sensitive.to_csv(projectdir + \"current-lists/sensitive-lists/NSW-sensitive-2022-10.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Manual List check\n",
+    "\n",
+    "**Instructions**\n",
+    "1. Load the lists above into the lists-test tool\n",
+    "2. Check the list name matching score and the text appearance on species pages\n",
+    "3. Unskip the below code and Run the reports below to compare to production. Send the changelog.csv to check. Correct any issues.\n",
+    "4. Save the production list into the `historical lists` directory by uncommenting the code section below.\n",
+    "5. Load the lists into production"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Conservation List - Download old and new and compare"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# %%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"NSW-conservation.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr650\" + \"?max=10000&includeKVP=true\"\n",
+    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr650\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Sensitive List - Download old and new and compare"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "%%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"NSW-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr487\" + \"?max=10000&includeKVP=true\"\n",
+    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr18457\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
