--- a/source-code/py-notebook/SA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/SA-conservation-sensitive.ipynb
@@ -8,7 +8,22 @@
     "\n",
     "## List Identifiers\n",
     "* Conservation list: __[dr653](https://lists.ala.org.au/speciesListItem/list/dr653)__\n",
-    "* Sensitive list: __[dr884](https://lists.ala.org.au/speciesListItem/list/dr884)__"
+    "* Sensitive list: __[dr884](https://lists.ala.org.au/speciesListItem/list/dr884)__\n",
+    "* Collection: __[dr653](https://collections.ala.org.au/public/show/dr653)__ __[dr884](https://collections.ala.org.au/public/show/dr884)__\n",
+    "\n",
+    "### Source Data\n",
+    "* [Fauna](https://data.environment.sa.gov.au/Content/Publications/fauna-bdbsa-taxonomy.xlsx)\n",
+    "* [Flora](https://data.environment.sa.gov.au/Content/Publications/vascular-plants-bdbsa-taxonomy.xlsx)\n",
+    "\n",
+    "**Metadata Description**\n",
+    "\n",
+    "South Australia Classification codes under the National Parks and Wildlife Act 1972: Endangered or extinct Vulnerable Rare Learn more about the classifications used by the Department of Environment and Natural Resources. Information on currently accepted flora and fauna taxonomy in South Australia including conservation status information. The following resources provide machine readable data on currently accepted flora and fauna taxonomy: vascular plants taxonomy (918kb xls) used in conjunction with vascular plants metadata (39kb pdf) vertebrate taxonomy (244kb xls) used in conjunction with vertebrates metadata (26kb pdf).\n",
+    "\n",
+    "\n",
+    "**Metadata URL**\n",
+    "\n",
+    "* Fauna: https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-vertebrates\n",
+    "* Flora: https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-plants-algae-fungi"
    ],
    "metadata": {
     "collapsed": false,
@@ -24,7 +39,8 @@
    "source": [
     "#import essential libraries\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import list_functions as lf"
    ],
    "metadata": {
     "collapsed": false,
@@ -34,17 +50,19 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "## Conservation list\n",
-    "Read Excel files into dataframes from these sources:\n",
-    " Fauna: [metadata](https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-vertebrates) and [BDBSA taxonomy](https://data.environment.sa.gov.au/Content/Publications/fauna-bdbsa-taxonomy.xlsx)\n",
-    " Flora: [metadata](https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-plants-algae-fungi) and [BDBSA taxonomy](https://data.environment.sa.gov.au/Content/Publications/vascular-plants-bdbsa-taxonomy.xlsx)"
+    "# Read Excel files into dataframes from these sources:\n",
+    "#  Fauna: [metadata](https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-vertebrates) and [BDBSA taxonomy](https://data.environment.sa.gov.au/Content/Publications/fauna-bdbsa-taxonomy.xlsx)\n",
+    "#  Flora: [metadata](https://www.environment.sa.gov.au/topics/science/information-and-data/census-of-sa-plants-algae-fungi) and [BDBSA taxonomy](https://data.environment.sa.gov.au/Content/Publications/vascular-plants-bdbsa-taxonomy.xlsx)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
@@ -465,6 +483,120 @@
    "outputs": [],
    "source": [
     "sasensitive.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/sensitive-lists/SA-sensitive.csv\",encoding=\"UTF-8\",index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Manual List check\n",
+    "\n",
+    "**Instructions**\n",
+    "1. Load the lists above into the lists-test tool\n",
+    "2. Check the list name matching score and the text appearance on species pages\n",
+    "3. Unskip the below code and Run the reports below to compare to production. Send the changelog.csv to check. Correct any issues.\n",
+    "4. Save the production list into the `historical lists` directory by uncommenting the code section below.\n",
+    "5. Load the lists into production"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Conservation List - Download old and new and compare"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# %%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"SA-conservation.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr653\" + \"?max=10000&includeKVP=true\"\n",
+    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr653\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Sensitive List - Download old and new and compare\n",
+    "### not currently in lists-test"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%script echo skipping # comment this line to run this code\n",
+    "\n",
+    "import datetime\n",
+    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
+    "\n",
+    "# conservation\n",
+    "filename = \"SA-sensitive.csv\"\n",
+    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr884\" + \"?max=10000&includeKVP=true\"\n",
+    "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr2627\" + \"?max=10000&includeKVP=true\"\n",
+    "changelist = lf.get_changelist(testListUrl, prodListUrl)\n",
+    "# save the lists locally\n",
+    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "\n",
+    "prodList = lf.download_ala_list(prodListUrl) # save the prod list to the historical lists directory\n",
+    "prodList = lf.kvp_to_columns(prodList)\n",
+    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
+    "changelist"
    ],
    "metadata": {
     "collapsed": false,
